implement simulator for data collection and update function to update chart as new data becomes available

--- a/index.html
+++ b/index.html
@@ -26,15 +26,8 @@
             <option value="line">Line</option>
             <option value="bar">Bar</option>
         </select>
-        <select id="unit">
-            <option value="second">Second</option>
-            <option value="minute">Minute</option>
-            <option value="hour">Hour</option>
-            <option value="day" selected>Day</option>
-            <option value="month">Month</option>
-            <option value="year">Year</option>
-        </select>
         <button id="update">update</button>
+    <script src="C:\Projects\EdgeSimulator\Simulator.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
