update code to hook in with pi web api endpoint

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <option value="bar">Bar</option>
         </select>
         <button id="update">update</button>
-    <script src="C:\Projects\EdgeSimulator\Simulator.js"></script>
+    <script src="Simulator.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
